adjust builders to be simpler
Signed-off-by: arik-dig <asher@digma.ai>